[package]
name = "transfer-sol-example"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.11.1"

[features]
test-bpf = []

[dev-dependencies]
solana-logger = "1.11.1"
solana-program-test = "1.11.1"
solana-sdk = "1.11.1"
solana-validator = "1.11.1"

[lib]
crate-type = ["cdylib", "lib"]
